[workspace]
members = [".", "client"]

[package]
name = "api_key_tdx"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio  ={ version="1.44", features=["macros", "fs", "rt-multi-thread", "io-util", "process", "sync"] }
axum   ={ version="0.8.4" }
clap             ={ version="4.5.37", features=["derive"] }
anyhow             ="1.0.98"
sp-core           ={ version="34.0.0", default-features=false }
x25519-dalek       ={ version="2.0.1", features=["static_secrets"] }
serde              ={ version="1.0", default-features=false, features=["derive"] }
serde_json         ="1.0"
sha2             ="0.10.9"
subxt             = { version = "0.38.0", features=["substrate-compat"]}
subxt-core    ={ version="0.38.0", default-features=false }
zeroize            ="1.8.1"
thiserror     ="2.0.12"
tracing                 ="0.1.41"
rand_core         ={ version="0.6.4" }
reqwest           ={ version="0.12.12", features=["json"] }
url = "2.5"
backoff            ={ version="0.4.0", features=["tokio"] }

# Entropy crates
entropy-protocol = { branch="master", git="https://github.com/entropyxyz/entropy-core", features=["server"] }
entropy-client = { branch="master", git="https://github.com/entropyxyz/entropy-core" }
entropy-testing-utils = { branch="master", git="https://github.com/entropyxyz/entropy-core" }
entropy-api-key-service-client = { version="0.0.1", path="./client" }

[dev-dependencies]
serial_test ="3.2.0"
sp-keyring        ="39.0.0"

[features]
default = ["std"]
std         =["sp-core/std"]
