[workspace]
members = [".", "client", "shared"]

[package]
name = "api_key_tdx"
version = "0.1.0"
edition = "2024"
authors = ['Entropy Cryptography <engineering@entropy.xyz>']
homepage = 'https://entropy.xyz/'
description= 'The Entropy API Key Service'
license  = 'AGPL-3.0-or-later'
repository = 'https://github.com/entropyxyz/api_key_tdx'

[dependencies]
tokio  ={ version="1.44", features=["macros", "fs", "rt-multi-thread", "io-util", "process", "sync"] }
axum   ={ version="0.8.4" }
clap             ={ version="4.5.38", features=["derive"] }
anyhow             ="1.0.98"
sp-core           ={ version="36.1.0", default-features=false }
x25519-dalek       ={ version="2.0.1", features=["static_secrets"] }
serde              ={ version="1.0", default-features=false, features=["derive"] }
serde_json         ="1.0"
sha2             ="0.10.9"
subxt             = { version = "0.42.0" }
subxt-core    ={ version="0.42.0", default-features=false }
zeroize            ="1.8.1"
thiserror     ="2.0.12"
tracing                 ="0.1.41"
rand_core         ={ version="0.6.4" }
reqwest           ={ version="0.12.22", features=["json"] }
url = "2.5"
backoff            ={ version="0.4.0", features=["tokio"] }
rand          ={ version="0.8", default-features=false }
tdx-quote        ={ version="0.0.3", features=["mock"] }
configfs-tsm     ={ version="0.0.1", optional=true }
hex = "0.4.3"

# Entropy crates
entropy-protocol = { branch="generalize-tree-state", git="https://github.com/entropyxyz/entropy-core", features=["server"] }
entropy-client = { branch="generalize-tree-state", git="https://github.com/entropyxyz/entropy-core", features=["server"] }
entropy-shared = { branch="generalize-tree-state", git="https://github.com/entropyxyz/entropy-core" }
entropy-api-key-service-shared = { version="0.0.1", path="./shared" }

[dev-dependencies]
serial_test ="3.2.0"
sp-keyring        ="41.0.0"
entropy-api-key-service-client = { version="0.0.1", path="./client" }
entropy-testing-utils = { branch="generalize-tree-state", git="https://github.com/entropyxyz/entropy-core" }

[build-dependencies]
vergen={ version="8.3.2", features=["build", "git", "gitcl"] }

[features]
default = ["std"]
std         =["sp-core/std"]
# Enables non-mock TDX quotes
production = ["dep:configfs-tsm", "entropy-client/production"]
