[package]
name = "entropy-api-key-service-client"
version = "0.0.1"
edition = "2024"
authors = ['Entropy Cryptography <engineering@entropy.xyz>']
homepage = 'https://entropy.xyz/'
description= 'A client for the Entropy API Key Service'
license  = 'AGPL-3.0-or-later'
repository = 'https://github.com/entropyxyz/api_key_tdx'

[dependencies]
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
reqwest = { version="0.12.20", features=["json"] }
sp-core = { version="36.1.0", default-features=false }
subxt = { version = "0.42.0" }
thiserror = "2.0.12"
rand = "0.8"

# Entropy
entropy-client={ branch="peg/store-full-tdx-quote-for-trees", git="https://github.com/entropyxyz/entropy-core", features=["full-client"] }
entropy-protocol={ branch="peg/store-full-tdx-quote-for-trees", git="https://github.com/entropyxyz/entropy-core" }
entropy-api-key-service-shared = { version="0.0.1", path="../shared" }

# For test cli - disable default features if you do not what these dependencies
tokio = { version="1.44", features=["macros", "fs", "rt-multi-thread", "io-util", "process", "sync"], optional=true }
clap = { version="4.5.37", features=["derive"], optional=true }
anyhow = { version="1.0.98", optional=true }
hex = { version="0.4.3", optional=true }

[features]
default = ["dep:tokio", "dep:clap", "dep:anyhow", "dep:hex"]
